--- a/Pages/2D3D.html
+++ b/Pages/2D3D.html
@@ -64,7 +64,7 @@
      }
 </style>
 <body>
-    <h1><a id="home" href="index.html">F I O N A &nbsp; P E N N</a></h1>
+    <h1><a id="home" href="../index.html">F I O N A &nbsp; P E N N</a></h1>
 
 <ul>
 <li><a href="time_based.html">t i m e &nbsp; b a s e d</a></li>
