--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -37,7 +37,17 @@
 </ul>
 
 <h2>v i d e o s</h2>
-  <article class="video">
+   
+   
+    <article class="video">
+    <figure>
+      <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/207202916?title=0&byline=0&portrait=0">
+      <img class="videoThumb" src="https://i.vimeocdn.com/video/622223898_590x332.webp"></a>
+    </figure>
+    <p class="videoTitle">f i r e &nbsp; f i g h t i n g</p>
+  </article>
+    
+    <article class="video">
     <figure>
       <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/184780544?byline=0&portrait=0">
       <img class="videoThumb" src="https://i.vimeocdn.com/video/594328870_590x332.webp"></a>
