--- a/Pages/Sketchbook.html
+++ b/Pages/Sketchbook.html
@@ -76,17 +76,17 @@
 </ul>
  
 <section id="photos">
-<img src="../thingsmedia/belljarscan.jpg">
-<img src="../thingsmedia/bluehands.jpg">
-<img src="../thingsmedia/catscan.jpg">
-<img src="../thingsmedia/dad010.png">
-<img src="../thingsmedia/dad011.png">
-<img src="../thingsmedia/dad016.png">
-    <img src="../thingsmedia/Girls%20Poem.jpg">
-    <img src="../thingsmedia/screamingsketch.png">
-    <img src="../thingsmedia/Screen%20Shot%202017-02-04%20at%2012.17.50%20PM.png">
-    <img src="../thingsmedia/Screen%20Shot%202017-02-19%20at%204.24.47%20PM.png">
-    <img src="../thingsmedia/Screen%20Shot%202017-02-16%20at%203.37.00%20PM.png">
+<img src="../thingsmedia1/belljarscan.jpg">
+<img src="../thingsmedia1/bluehands.jpg">
+<img src="../thingsmedia1/catscan.jpg">
+<img src="../thingsmedia1/dad010.png">
+<img src="../thingsmedia1/dad011.png">
+<img src="../thingsmedia1/dad016.png">
+    <img src="../thingsmedia1/Girls%20Poem.jpg">
+    <img src="../thingsmedia1/screamingsketch.png">
+    <img src="../thingsmedia1/Screen%20Shot%202017-02-04%20at%2012.17.50%20PM.png">
+    <img src="../thingsmedia1/Screen%20Shot%202017-02-19%20at%204.24.47%20PM.png">
+    <img src="../thingsmedia1/Screen%20Shot%202017-02-16%20at%203.37.00%20PM.png">
   
   
 
