--- a/Pages/animation.html
+++ b/Pages/animation.html
@@ -32,10 +32,28 @@
 <li><a href="Coding.html">c o d i n g</a></li>
 <li><a href="2D3D.html">2 d / 3 d</a></li>
 <li><a href="Sketchbook.html">t h i n g s</a></li>
+<li><a href="../Pages/about.html">a b o u t</a></li>
 
 </ul>
 
 <h2>animation</h2>
+    
+  
+   <article class="video">
+    <figure>
+      <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/206344387?title=0&byline=0&portrait=0">
+      <img class="videoThumb" src="https://i.vimeocdn.com/video/622222621_590x332.webp"></a>
+    </figure>
+    <p class="videoTitle">c o m e&nbsp;&nbsp;d o w n s t a i r s</p>
+  </article>
+    
+    <article class="video">
+    <figure>
+      <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/184780544?byline=0&portrait=0">
+      <img class="videoThumb" src="https://i.vimeocdn.com/video/594328870_590x332.webp"></a>
+    </figure>
+    <p class="videoTitle">y o u&nbsp;&nbsp; a r e&nbsp;&nbsp; y o u n g e r&nbsp;&nbsp; u n d e r w a t e r</p>
+  </article>
 
 <article class="video">
     <figure>
