--- a/Pages/time_based.html
+++ b/Pages/time_based.html
@@ -54,6 +54,7 @@ article a:visited
 <li><a href="Coding.html">c o d i n g</a></li>
 <li><a href="2D3D.html">2 d / 3 d</a></li>
 <li><a href="Sketchbook.html">t h i n g s</a></li>
+<li><a href="about.html">a b o u t</a></li>
 </ul>
 
     <h2><a href="videos.html">v i d e o s > ></a></h2>
