--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -30,14 +30,24 @@
 
 <ul>
 <li><a href="time_based.html">t i m e &nbsp; b a s e d</a></li>
-<li><a href="Coding.html">c o d i n g</a></li>
 <li><a href="2D3D.html">2 d / 3 d</a></li>
 <li><a href="Sketchbook.html">t h i n g s</a></li>
+<li><a href="../Pages/about.html">a b o u t</a></li>
 
 </ul>
 
 <h2>v i d e o s</h2>
-  <article class="video">
+   
+   
+    <article class="video">
+    <figure>
+      <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/207202916?title=0&byline=0&portrait=0">
+      <img class="videoThumb" src="https://i.vimeocdn.com/video/622223898_590x332.webp"></a>
+    </figure>
+    <p class="videoTitle">f i r e &nbsp; f i g h t i n g</p>
+  </article>
+    
+    <article class="video">
     <figure>
       <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/184780544?byline=0&portrait=0">
       <img class="videoThumb" src="https://i.vimeocdn.com/video/594328870_590x332.webp"></a>
