--- a/Pages/about.html
+++ b/Pages/about.html
@@ -48,7 +48,7 @@ i like animation, video, and sound
 vcuarts kinetic imaging class of 2019
 <br>
     <br>
-    <a href="https://vimeo.com/fionapenn">vimeo.com/fionapenn</a>
+    <a target="_blank" href="https://vimeo.com/fionapenn">vimeo.com/fionapenn</a>
     <br>
 email me: pennfe@vcu.edu
     <br>
