--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@ li
             letter-spacing: 4px
 }
 
+.button:active,
+.button:focus,
+.button.active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .button span {
   cursor: crosshair;
   display: inline-block;
