--- a/Pages/about.html
+++ b/Pages/about.html
@@ -105,6 +105,7 @@ August 2014 - Present (on breaks from school)
     -Premiere Pro<br>
     -After Effects<br>
     -Audition<br>
+    -Dragonframe<br>
     -Ableton Live 9<br>
     -Reaper<br>
     -Photoshop (incl. frame by frame animation)<br>
