--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 	<link REL=StyleSheet href="../CSS/home.css" type="text/css">
 	<style>
 
-		
+h3
+        {text-align: center}
+
+.codes {
+  display: block;
+  border-radius: 2px;
+  background-color: peachpuff;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 13px;
+  font-family:;
+  padding: 5px;
+
+  transition: all 0.5s;
+  cursor: crosshair;
+  margin: auto;
+  position: relative;
+ 
+            letter-spacing: 4px
+}		
 
 	
 p
@@ -250,7 +270,8 @@ li
     <div class="list-four"></div></dialog>
     <br><br><br><br><br><br><br><br>
 <button class="button"><span>stroll</span></button>
-
+<h3>~ featured codes ~</h3>
+<button class="codes"><a href="Pages/spices.html">disjointed ingredients</a></button><br>
 	
 
 </body>
