--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<link REL=StyleSheet href="../CSS/home.css" type="text/css">
 	<style>
 
+		
 h3
         {text-align: center}
 
-.codes {
+        .codes {
   display: block;
   border-radius: 2px;
   background-color: peachpuff;
@@ -31,7 +32,7 @@ h3
   position: relative;
  
             letter-spacing: 4px
-}		
+}
 
 	
 p
@@ -133,6 +134,24 @@ li
   opacity: 1;
   right: 0;
 }
+        
+h2
+        {text-align: center;
+        line-height: 25%}
+h4
+        {text-align: center;
+        margin: 0;
+        padding-bottom: 0}
+.description
+        {font-size: 12px}
+
+.title
+        {text-align: center}
+img
+        {width: 300px;
+        height: 300px;
+        border-color: peachpuff;
+        border-width: 10px}
 
 	</style>
 
@@ -256,23 +275,34 @@ li
 <ul>
 
   
- <li> <a href="Pages/time_based.html">time&nbsp;based</a></li>
-<li><a href="Pages/2D3D.html">2d/d</a></li>
+ <div class="menu"><li> <a href="Pages/time_based.html">time&nbsp;based</a></li>
+<li><a href="Pages/2D3D.html">2d/3d</a></li>
 <li><a href="Pages/Sketchbook.html">things</a></li>
-<li><a href="/Pages/about.html">about</a></li>
+     <li><a href="/Pages/about.html">about</a></li></div>
 
 </ul>
-
-<h2></h2>
+  
+<h2>live set 4.2.2017</h2>
+    <p class="description">using analog korg minilogue and <br>samples from "ten things i hate about you"</p>
+    <div align="center"><audio controls>
+ 
+  <source src="Media/taketwoliveset.wav" type="audio/mpeg">
+Your browser does not support the audio element.
+    </audio></div>
+ <br><br>   
+<h2>library walk</h2>
+    <p class="description">an interactive java poem</p>
 <dialog open class=shadowbox><span class="list-one"></span>
 	<div class="list-two"></div>
 	<div class="list-three"></div>
     <div class="list-four"></div></dialog>
     <br><br><br><br><br><br><br><br>
 <button class="button"><span>stroll</span></button>
-<h3>~ featured codes ~</h3>
+<br><br><br>
+
 <button class="codes"><a href="Pages/spices.html">disjointed ingredients</a></button><br>
-	
+
+
 
 </body>
 
