--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ img
     <p class="description">using analog korg minilogue and <br>samples from "ten things i hate about you"</p>
     <div align="center"><audio controls>
  
-  <source src="Media/taketwoliveset.wav" type="audio/mpeg">
+  <source src="Media/live_set.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
     </audio></div>
  <br><br>   
