--- a/Pages/flash011.html
+++ b/Pages/flash011.html
@@ -101,7 +101,7 @@ a:active {
 <div class="fullscreen-bg">
     <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
         
-        <source src="../Media/body.mov" type="video/mp4">
+        <source src="../Media/body.mp4" type="video/mp4">
        
     </video>
 </div>
