--- a/Pages/flash002.html
+++ b/Pages/flash002.html
@@ -95,7 +95,7 @@ a:active {
 <div class="fullscreen-bg">
     <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
         
-        <source src="../Media/window1.mov" type="video/mp4">
+        <source src="../Media/window1.mp4" type="video/mp4">
        
     </video>
 </div>
