--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ Your browser does not support the audio element.
 <br><br><br>
 
 <button class="codes"><a href="Pages/spices.html">disjointed ingredients</a></button><br>
+<button class="codes"><a href="Pages/flashhome">flashes of perception</a></button><br>
 
 
 
