--- a/Pages/notdead.html
+++ b/Pages/notdead.html
@@ -45,7 +45,7 @@ a:active {
 </style>
 <body>
   
-<img src="whoops.gif" width="75%" align="right">
+<img src="../Media/whoops.gif" width="75%" align="right">
     
 </body>
 </html>
