--- a/howikilledtheplants.html
+++ b/howikilledtheplants.html
@@ -45,7 +45,7 @@ a:active {
 <body>
   
        <h1>
-           <a href="Pages/1.html"> how i killed four plants </a>
+           <a href="Pages/1.html"> how i killed the plants </a>
        </h1> 
        
     
