--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ Your browser does not support the audio element.
 <button class="button"><span>stroll</span></button>
 <br><br><br>
 
+<button class="codes"><a href="howikilledtheplants.html">how i killed the plants</a></button><br>
 <button class="codes"><a href="Pages/spices.html">disjointed ingredients</a></button><br>
 <button class="codes"><a href="Pages/flashhome">flashes of perception</a></button><br>
 
