--- a/index.html
+++ b/index.html
@@ -282,6 +282,15 @@ img
 
 </ul>
   
+	<h2>gameplay music for "lineman"</h2>
+    <p class="description">using analog korg minilogue</p>
+    <div align="center"><audio controls>
+ 
+  <source src="Media/finalsoundtrackcut.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+    </audio></div>
+ <br><br>   
+	
 <h2>live set 4.2.2017</h2>
     <p class="description">using analog korg minilogue and <br>samples from "ten things i hate about you"</p>
     <div align="center"><audio controls>
@@ -289,7 +298,14 @@ img
   <source src="Media/live_set.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
     </audio></div>
+ <br><br>  
+	
+ 
+  <source src="Media/live_set.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+    </audio></div>
  <br><br>   
+	
 <h2>library walk</h2>
     <p class="description">an interactive java poem</p>
 <dialog open class=shadowbox><span class="list-one"></span>
