--- a/Pages/about.html
+++ b/Pages/about.html
@@ -42,7 +42,7 @@ h3
 hello 
 <br>
     <br>
-i like animation, video, and sound
+fiona penn explores themes of identity, anthropology, and linguistics through 3d animation and coding.
 <br>
 <br>
 vcuarts kinetic imaging class of 2019
