--- a/Pages/about.html
+++ b/Pages/about.html
@@ -42,9 +42,12 @@ h3
 hello 
 <br>
     <br>
-i explores themes of identity, anthropology, and linguistics using 3d animation and coding
+i explores themes of identity through the lens of anthropology and linguistics
 <br>
 <br>
+ i work in the intersection of 3d animation, appropriated video, and node-based programming.
+  <br>
+   <br>
 vcuarts kinetic imaging class of 2019
 <br>
     <br>
