--- a/Pages/music.html
+++ b/Pages/music.html
@@ -43,11 +43,11 @@
     <div class="column4">
 <h2>MUSIC</h2>
         
-        <h2><em>girls in my mirrors</em></h2>
+        <h2><em>the girls in my mirrors</em></h2>
     <p class="description">coded in tidal cycles<br>samples from "all the things she said" by t.a.T.U.</p>
     <div align="center"><audio controls>
  
-  <source src="../Media/smearing.wav" type="audio/mpeg">
+  <source src="../Media/smearing.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
     </audio></div>
  <br><br>         
@@ -56,7 +56,7 @@ Your browser does not support the audio element.
     <p class="description">coded in sonic pi<br>samples from my grandma talking</p>
     <div align="center"><audio controls>
  
-  <source src="../Media/grandmafloat.wav" type="audio/mpeg">
+  <source src="../Media/grandmafloat.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
     </audio></div>
  <br><br>        
