--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
      <li><a href="../Pages/music.html">music</a></li>
      <li><a href="https://globalgamejam.org/2018/games/lineman">game jam</a></li>
      <li><a href="https://vimeo.com/fionapenn">vimeo</a></li>
-     <li><a href="about.html">about</a></li></div>
+     <li><a href="../Pages/about.html">about</a></li></div>
 
 </ul>
     </div>
